--- a/about-industrial-actuators.html
+++ b/about-industrial-actuators.html
@@ -137,18 +137,18 @@
                         </ul>
                     </li>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="products-actuators-gearboxes.html">Products</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="products-actuators-gearboxes.html" aria-haspopup="true" aria-expanded="false">Products</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="products-actuators-gearboxes.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products-actuators-gearboxes.html#gearboxes">Gearboxes</a></li>
                             <li><a href="products-actuators-gearboxes.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
                             <li><a href="products-actuators-gearboxes.html#electrical">Electrical Actuators</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -169,9 +169,9 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="industries-served.html">Industries</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="industries-served.html" aria-haspopup="true" aria-expanded="false">Industries</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="industries-served.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries-served.html#water-treatment">Water Treatment</a></li>
                             <li><a href="industries-served.html#power-generation">Power Generation</a></li>
@@ -180,9 +180,9 @@
                             <li><a href="industries-served.html#pharmaceutical">Pharmaceutical</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="services-installation-maintenance.html">Services</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="services-installation-maintenance.html" aria-haspopup="true" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="services-installation-maintenance.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services-installation-maintenance.html#maintenance">Maintenance & Support</a></li>
                             <li><a href="services-installation-maintenance.html#training">Training Programs</a></li>
@@ -191,9 +191,9 @@
                             <li><a href="services-installation-maintenance.html#technical-support">Technical Support</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="about-industrial-actuators.html" class="active">About Us</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="about-industrial-actuators.html" class="active" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="about-industrial-actuators.html#story">Our Story</a></li>
                             <li><a href="about-industrial-actuators.html#mission">Mission & Values</a></li>
                             <li><a href="about-industrial-actuators.html#certifications">Certifications</a></li>
@@ -201,9 +201,9 @@
                         </ul>
                     </li>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="careers.html">Careers</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="careers.html" aria-haspopup="true" aria-expanded="false">Careers</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="careers.html#openings">Open Positions</a></li>
                             <li><a href="careers.html#life">Life at Susin</a></li>
                             <li><a href="careers.html#benefits">Benefits</a></li>
@@ -212,9 +212,9 @@
                             <li><a href="careers.html#contact-hr">Contact HR</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="resources-technical-docs.html">Resources</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="resources-technical-docs.html" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="resources-technical-docs.html#datasheets">Datasheets</a></li>
                             <li><a href="resources-technical-docs.html#manuals">Manuals</a></li>
                             <li><a href="resources-technical-docs.html#sizing-programs">Actuators Sizing Programs</a></li>
@@ -222,9 +222,9 @@
                             <li><a href="resources-technical-docs.html#blog">Blog & News</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -245,9 +245,9 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="contact-support-sales.html">Contact</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="contact-support-sales.html" aria-haspopup="true" aria-expanded="false">Contact</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="contact-support-sales.html#contact-form">Contact Form</a></li>
                             <li><a href="contact-support-sales.html#sales">Sales Inquiry</a></li>
                             <li><a href="contact-support-sales.html#support">Technical Support</a></li>
