--- a/industries-served.html
+++ b/industries-served.html
@@ -128,9 +128,9 @@
                         </ul>
                     </li>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="products-actuators-gearboxes.html">Products</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="products-actuators-gearboxes.html" aria-haspopup="true" aria-expanded="false">Products</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="products-actuators-gearboxes.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products-actuators-gearboxes.html#gearboxes">Gearboxes</a></li>
                             <li><a href="products-actuators-gearboxes.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
@@ -160,9 +160,9 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="industries-served.html" class="active">Industries</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="industries-served.html" class="active" aria-haspopup="true" aria-expanded="false">Industries</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="industries-served.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries-served.html#water-treatment">Water Treatment</a></li>
                             <li><a href="industries-served.html#power-generation">Power Generation</a></li>
@@ -171,9 +171,9 @@
                             <li><a href="industries-served.html#pharmaceutical">Pharmaceutical</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="services-installation-maintenance.html">Services</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="services-installation-maintenance.html" aria-haspopup="true" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="services-installation-maintenance.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services-installation-maintenance.html#maintenance">Maintenance & Support</a></li>
                             <li><a href="services-installation-maintenance.html#training">Training Programs</a></li>
@@ -182,18 +182,18 @@
                             <li><a href="services-installation-maintenance.html#technical-support">Technical Support</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="about-industrial-actuators.html">About Us</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="about-industrial-actuators.html" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="about-industrial-actuators.html#story">Our Story</a></li>
                             <li><a href="about-industrial-actuators.html#mission">Mission & Values</a></li>
                             <li><a href="about-industrial-actuators.html#certifications">Certifications</a></li>
                             <li><a href="about-industrial-actuators.html#why-choose">Why Choose Us</a></li>
                         </ul>
                     </li>
-                        <li class="dropdown" role="menuitem" aria-haspopup="true">
-                            <a href="careers.html">Careers</a>
-                            <ul class="dropdown-menu" role="menu">
+                        <li class="dropdown" role="menuitem">
+                            <a href="careers.html" aria-haspopup="true" aria-expanded="false">Careers</a>
+                            <ul class="dropdown-menu" role="menu" aria-hidden="true">
                                 <li><a href="careers.html#openings">Open Positions</a></li>
                                 <li><a href="careers.html#life">Life at Susin</a></li>
                                 <li><a href="careers.html#benefits">Benefits</a></li>
@@ -202,9 +202,9 @@
                                 <li><a href="careers.html#contact-hr">Contact HR</a></li>
                             </ul>
                         </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="resources-technical-docs.html">Resources</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="resources-technical-docs.html" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="resources-technical-docs.html#datasheets">Datasheets</a></li>
                             <li><a href="resources-technical-docs.html#manuals">Manuals</a></li>
                             <li><a href="resources-technical-docs.html#sizing-programs">Actuators Sizing Programs</a></li>
@@ -212,9 +212,9 @@
                             <li><a href="resources-technical-docs.html#blog">Blog & News</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -235,9 +235,9 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="contact-support-sales.html">Contact</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="contact-support-sales.html" aria-haspopup="true" aria-expanded="false">Contact</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="contact-support-sales.html#contact-form">Contact Form</a></li>
                             <li><a href="contact-support-sales.html#sales">Sales Inquiry</a></li>
                             <li><a href="contact-support-sales.html#support">Technical Support</a></li>
