--- a/contact-support-sales.html
+++ b/contact-support-sales.html
@@ -143,9 +143,9 @@
                             <li><a href="products-actuators-gearboxes.html#electrical">Electrical Actuators</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -218,9 +218,9 @@
                             <li><a href="resources-technical-docs.html#blog">Blog & News</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown" role="menuitem" aria-haspopup="true">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu" role="menu">
+                    <li class="dropdown" role="menuitem">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
